# beans-xml

./: .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  LICENSE-MIT  NOTICE  README.md  release-plz.toml  rust-toolchain.toml
.github/workflows/: ci.yml  release-plz.yml
benches/: parse_1mb.rs
examples/: bean_list.rs  dep_graph_dot.rs  gen_fixtures.rs  gen_schema.rs  k_harness.rs
fixtures/collections/: list_merge_true.expected.json  list_merge_true.xml  list_of_values.expected.json  list_of_values.xml  map_with_entry_ref_and_key_type.expected.json  map_with_entry_ref_and_key_type.xml  nested_collection_ref.expected.json  nested_collection_ref.xml  props_entries.expected.json  props_entries.xml  set_with_value_type.expected.json  set_with_value_type.xml
fixtures/component-scan/: component_scan_base_package_single.expected.json  component_scan_base_package_single.xml  component_scan_include_exclude_filters.expected.json  component_scan_include_exclude_filters.xml  component_scan_use_default_filters_false.expected.json  component_scan_use_default_filters_false.xml
fixtures/core/: bean_abstract_template.expected.json  bean_abstract_template.xml  bean_autowire_byname.expected.json  bean_autowire_byname.xml  bean_depends_on_multiple.expected.json  bean_depends_on_multiple.xml  bean_description_and_meta.expected.json  bean_description_and_meta.xml  bean_factory_bean_and_method.expected.json  bean_factory_bean_and_method.xml  bean_factory_method_static.expected.json  bean_factory_method_static.xml  bean_idref.expected.json  bean_idref.xml  bean_inner_bean_property.expected.json  bean_inner_bean_property.xml  bean_lookup_and_replaced_method.expected.json  bean_lookup_and_replaced_method.xml  bean_null_value.expected.json  bean_null_value.xml  bean_parent_inheritance.expected.json  bean_parent_inheritance.xml  bean_qualifier_with_attribute.expected.json  bean_qualifier_with_attribute.xml  bean_ref_local_and_parent_container.expected.json  bean_ref_local_and_parent_container.xml  bean_with_constructor_args.expected.json  bean_with_constructor_args.xml  bean_with_multiple_names.expected.json  bean_with_multiple_names.xml  bean_with_property_ref.expected.json  bean_with_property_ref.xml  bean_with_property_value.expected.json  bean_with_property_value.xml  bean_with_scope_and_lazy.expected.json  bean_with_scope_and_lazy.xml  bean_without_class_or_parent_diagnostic.expected.json  bean_without_class_or_parent_diagnostic.xml  minimal_bean.expected.json  minimal_bean.xml
fixtures/egov-archetypes/: dbcp_datasource.xml  (+9 more)
proptest-regressions/: events.txt
schema/: beans-xml.v1.json
src/: bean.rs  collection.rs  constructor_arg.rs  depth_engine.rs  dispatch.rs  encoding.rs  events.rs  inject_value.rs  lib.rs  model.rs  namespaced.rs  property.rs
tests/: conformance.rs  dep_graph_dot_example.rs  i1_class_refs.rs  i2_span_proptest.rs  i3_hostile_proptest.rs  i6_routing_recursion.rs  p10_nested_profile.rs  p1_alias.rs  p2_pc_namespace.rs  p3_import.rs  p4_component_scan.rs  p5_property_source.rs  p6_qualifier_meta_decorator.rs  p7_namespaced.rs  p8_method_injection.rs  p9_spel_placeholder.rs  scaffold.rs  u0_model.rs  u1_events.rs  u2_encoding.rs  u3_root_dispatch.rs  u4_bean_core.rs  u5a_inject_value.rs  u5b_collection.rs  u6_property.rs  u7_constructor_arg.rs
wasm/: Cargo.toml  README.md  THIRD_PARTY_NOTICES  build.sh
wasm/src/: lib.rs
wasm/tests/: smoke.js
(+59 files in other folders)
